--- a/src/app/main-content/projects/projects.component.scss
+++ b/src/app/main-content/projects/projects.component.scss
@@ -137,7 +137,7 @@
   gap: 35px;
   margin-bottom: 0;
   max-width: 100%;
-  z-index: 2;
+  z-index: 10;
   opacity: 0;
 }
 
@@ -212,6 +212,7 @@
   width: 520px;
   max-width: 520px;
   padding-top: 40px;
+  z-index: 10;
 }
 
 .portfolio_card-links-img img,
@@ -314,8 +315,8 @@
 .portfolio_purple-shadow {
   position: absolute;
   left: 0;
-  bottom: 0;
-  width: 318px;
+  top: 240px;
+  width: 452px;
   height: 520px;
   background: url(/assets/img/projects/projects_purple_shadow.png);
   background-repeat: no-repeat;
@@ -346,6 +347,7 @@
   align-items: center;
   opacity: 0;
   transform: rotateX(80deg) scale(0.96) translateX(-150px);
+  z-index: 10;
 }
 
 .portfolio_head-content__wrapper-mobile.is-inview {
