--- a/src/app/main-content/skill-set/skills-mobile-queries.component.scss
+++ b/src/app/main-content/skill-set/skills-mobile-queries.component.scss
@@ -166,17 +166,15 @@ $paddingRightText1200: 80px;
   }
 
   .skills-blob {
-    top: -521px;
-    left: -0.5%;
+    top: -416px;
+    left: -12%;
   }
 }
 
 @media (max-width: 768px) {
     .skills-blob {
-      left: -0.5%;
-      top: -521px;
-      width: 200px;
-      height: 545px;
+      left: -23%;
+      top: -366px;
     }
 
     .skills-content__reveal {
@@ -255,10 +253,8 @@ $paddingRightText1200: 80px;
   }
 
   .skills-blob {
-      left: -0.5%;
-      top: -521px;
-      width: 170px;
-      height: 624px;
+      left: -30%;
+      top: -465px;
   }
 
   .skills-tooltip {
@@ -307,10 +303,8 @@ $paddingRightText1200: 80px;
   }
 
   .skills-blob {
-      left: -2.5%;
-      top: -521px;
-      width: 150px;
-      height: 480px;
+    left: -43%;
+    top: -518px;
   }
 
   .skills-content {
@@ -383,10 +377,8 @@ $paddingRightText1200: 80px;
 
 @media (max-width: 420px) {
     .skills-blob {
-      left: -2.5%;
-      top: -521px;
-      width: 132px;
-      height: 480px;
+      left: -43%;
+      top: -518px;
   }
 
   .skills-grid__label {
@@ -415,10 +407,8 @@ $paddingRightText1200: 80px;
   }
 
   .skills-blob {
-    left: -4.5%;
-    top: -521px;
-    width: 150px;
-    height: 480px;
+    left: -55%;
+    top: -518px;
   }
 
   .skills-grid__bottom {
@@ -451,10 +441,8 @@ $paddingRightText1200: 80px;
   }
 
   .skills-blob {
-    left: -28.5%;
-    top: -600px;
-    width: 198px;
-    height: 570px;
+    left: -88%;
+    top: -610px;
     transform: rotate(17deg);
   }
 }
