--- a/src/app/main-content/skill-set/skills-mobile.component.scss
+++ b/src/app/main-content/skill-set/skills-mobile.component.scss
@@ -380,9 +380,9 @@ $paddingRightText1200: 80px;
 
 .skills-blob {
   position: absolute;
-  top: -312px;
-  left: -30px;
-  width: 290px;
+  top: -110px;
+  left: -170px;
+  width: 360px;
   height: 700px;
   background: url("/assets/img/skills/skills_green_shadow.png");
   background-repeat: no-repeat;
